' ============================================================
' SECCIÓN DEL DOCUMENTO: § 9. Modelos de Diseño › § 9.3 Modelo de Datos › § 9.3.a Diagrama de Clases Conceptual
' Archivo: docs/ONLINE/PRESENTACION/presentacion-scrum-s0-s1.md
' Perspectiva de diseño: (b) Diseño de Datos — Modelo Conceptual — Sprint 1
' ============================================================

@startuml
title Diseño de Datos — Modelo Conceptual (Diagrama de Clases UML 2.5)\nSprint 1: entidades implementadas — Wireless HeatMapper
skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam classHeaderBackgroundColor #2980B9
skinparam classHeaderFontColor white
skinparam arrowColor #2980B9
skinparam noteBackgroundColor #FFFDE7
hide circle

' ─── Enumeraciones de dominio ────────────────────────────────
enum RolUsuario {
  ADMIN
  TECNICO
}

enum EstadoProyecto {
  NUEVO
  EN_PROGRESO
  COMPLETADO
  ARCHIVADO
}

' ─── Entidades de dominio del Sprint 1 ───────────────────────
class Usuario {
  +id : Entero
  +nombre : Cadena
  +email : Cadena  {único}
  +contraseña : Cadena  {hasheada con bcrypt}
  +rol : RolUsuario
  +activo : Booleano
  +ultimoAcceso : FechaHora
  +fechaCreacion : FechaHora
  --
  +autenticar(email, contraseña) : Boolean
  +desactivar() : void
  +restablecerContraseña(nueva) : void
}

class RefreshToken {
  +id : Entero
  +token : Cadena  {único, 64 chars}
  +fechaExpiracion : FechaHora
  +fechaCreacion : FechaHora
  --
  +estaVigente() : Boolean
  +revocar() : void
}

class Cliente {
  +id : Entero
  +nombre : Cadena  {único}
  +activo : Booleano
  +fechaCreacion : FechaHora
  --
  +desactivar() : void
}

class Proyecto {
  +id : Entero
  +nombre : Cadena
  +descripcion : Cadena  {opcional}
  +estado : EstadoProyecto
  +ultimaActividad : FechaHora
  +cantidadPuntos : Entero  {default 0}
  +fechaCreacion : FechaHora
  --
  +archivar() : void
  +editar(nombre, descripcion, cliente) : void
  +eliminar() : void
}

' ─── Relaciones ──────────────────────────────────────────────
Usuario "1" --> "0..*" RefreshToken : posee >
note on link
  El técnico puede tener múltiples
  refresh tokens (multi-dispositivo).
  Se eliminan en cascada al
  desactivar la cuenta (PB-13 CA2).
end note

Usuario "1 técnico" --> "0..*" Proyecto : gestiona >
note on link
  Un técnico solo puede ver/modificar
  sus propios proyectos (validación en
  backend por tecnico_id, PB-01 CA5).
end note

Cliente "0..1" --> "0..*" Proyecto : está asociado a >
note on link
  cliente_id es FK opcional (NULLABLE).
  Un cliente desactivado mantiene su
  FK en proyectos históricos (PB-19 CA5).
end note

Usuario -right- RolUsuario : tiene >
Proyecto -right- EstadoProyecto : tiene >

note bottom of RefreshToken
  Ciclo de vida del token:
  access_token: 15 minutos.
  refresh_token: 7 días.
  Revocado explícitamente en logout
  (POST /api/auth/logout — PB-09 CA4).
end note

note bottom of Proyecto
  Aislamiento por técnico:
  GET /api/proyectos retorna SOLO
  los proyectos del técnico autenticado.
  GET /api/admin/proyectos devuelve todos
  (solo rol ADMIN — PB-18).
end note

note right of Cliente
  Solo el ADMIN puede crear/desactivar clientes.
  Todo usuario autenticado puede listarlos
  (necesario para el selector en la app móvil).
end note
@enduml
